tests/fixtures/invalid/divmod_list_bool.py
# Cannot call divmod() with List[int], Bool
x = divmod([1, 2, 3], True)
